# FromTube

./: .gitignore  CMakeLists.txt  README.md
design/: style1.xd  ui.psd
include/: mainwindow.h
python/: example.py
src/: main.cpp  mainwindow.cpp
